test/typecheck/errors/bad-views1.boa
view subv {
	o: output sum of int;
}

v := bad/o;
